assets/css/style.css
/* ----- import fonts ----- */
@import url("https://fonts.googleapis.com/css?family=Montserrat:500,600&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;600&display=swap");

/* ----- color options ----- */
/*
#ffc929;
#211f22;
#ff4040;
#509cff;
*/

/* ------ set clean elements styling by removing default margins and paddings ----- */
* {
  margin: 0;
  padding: 0;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

/* ------ set easy unit conversion for REM font size (1 REM = 10px) that still allows font scaling in browser ----- */
html {
  font-size: 62.5%;
}

body {
  font-size: 1.6rem;
  background-color: #211f22;
}

/* ----- navbar ----- */

nav {
  width: 100%;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  z-index: 2;
  height: 50px;
  background-color: #211f22;
  color: #ffc929;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-bottom: 1px solid #ffc929;
}

.website__name {
  color: #ffc929;
}

nav h1 {
  font-size: 2.6rem;
  font-family: "Inter", sans-serif;
  font-weight: 400;
}

/* ----- frontpage containers ----- */

.main__homepage__container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

.race__calendar__container {
  -webkit-box-flex: 0;
  -ms-flex: 0 0 320px;
  flex: 0 0 320px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
}

/* ---------- race calendar ---------- */

.race__events {
  background: #211f22;
  color: #ffc929;
  width: 100%;
  height: 60px;
  padding: 10px;
  border-right: 2px solid #ffc929;
  border-bottom: 2px solid #ffc929;
  font-family: "Montserrat", sans-serif;
  font-size: 1.4rem;
  font-weight: 500;
  line-height: 2rem;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.race__events:hover {
  background: #000000;
  color: #ff4040;
  cursor: pointer;
}

.event__location {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: pre-line;
}

.hamburger__icon__container {
  display: none;
}

.flags {
  max-height: 46px;
  max-width: 46px;
  margin-right: 10px;
}

.event__date {
  white-space: pre-line;
}

.active__event {
  color: #ff4040;
}

/* --------------- all info container --------------- */

.all__info__container {
  -webkit-box-flex: 1;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

/* ----- race countdown timer container ----- */

.race__countdown__timer__container {
  min-height: 40px;
  padding-top: 12px;
  padding-bottom: 12px;
  background: #211f22;
  color: #ffc929;
  border-bottom: 2px solid #ff4040;
  font-family: "Inter", sans-serif;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 2.6rem;
}

/* --------------- button dashboard container --------------- */

.button__dashboard__container {
  min-height: 60px;
  background: #211f22;
  border-bottom: 2px solid #ff4040;
  display: none;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 2.6rem;
}

.dashboard__button {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: crimson;
  height: 40px;
  width: 120px;
  border-radius: 10px;
  margin: 14px 20px 14px 20px;
  background: #ffc929;
  color: #211f22;
  font-family: "Montserrat", sans-serif;
  font-size: 2rem;
  font-weight: 600;
}

.dashboard__button:hover {
  background: #211f22;
  color: #ffc929;
  border: 2px solid #ffc929;
  cursor: pointer;
}

#temp__button {
  background: #ff4040;
  color: #211f22;
}

#temp__button:hover {
  background: #211f22;
  color: #ff4040;
  border: 2px solid #ff4040;
  cursor: pointer;
}

#active__button {
  background: #509cff;
  color: #211f22;
}

.weather__data__active {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

.track__data__active {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

.schedule__data__active {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

/* ----- track & time info container ----- */

.track__time__info__container {
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

/* ----- track info container ----- */

.track__info__container {
  -webkit-box-flex: 1;
  -ms-flex: 1 0 60%;
  flex: 1 0 60%;
  border-bottom: 2px solid #ff4040;
  border-right: 1px solid #ff4040;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  min-width: 660px;
}

/* ----- track info ----- */

.track__info {
  -webkit-box-flex: 1;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  font-family: "Inter", sans-serif;
  font-size: 2.6rem;
}
/* ... */

